--- a/core-bundle/src/Resources/contao/themes/flexible/src/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/main.css
@@ -458,7 +458,8 @@ h2.sub_headline {
 }
 .tl_box h3,.tl_tbox h3,.tl_xpl h3 {
 	margin:0;
-	padding:14px 0 1px;
+	padding-top:13px;
+	height:16px;
 	font-size:.875rem;
 }
 .tl_box h4,.tl_tbox h4 {
